Fix canvas stretching

--- a/blocks/canvas.css
+++ b/blocks/canvas.css
@@ -2,6 +2,4 @@
   background: #eee;
   display: block;
   margin: 0 auto;
-  width: 480px;
-  height: 320px;
 }
